--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
@@ -21,11 +22,18 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "babel-jest": "^27.5.1",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
+    "jest-mock": "^27.5.1",
     "typescript": "4.6.3"
   }
 }
