--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
+    "@testing-library/react": "12.1.2",
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
     "@types/react-dom": "17.0.14",
     "babel-jest": "^27.5.1",
     "eslint": "8.12.0",
@@ -34,6 +34,7 @@
     "jest": "^27.5.1",
     "jest-dom": "^4.0.0",
     "jest-mock": "^27.5.1",
-    "typescript": "4.6.3"
+    "next-page-tester": "^0.31.0",
+    "typescript": "^4.6.3"
   }
 }
