--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@emotion/styled": "^11",
     "firebase": "^9.6.10",
     "framer-motion": "^6",
-    "next": "12.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1.2",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
     "@types/react-dom": "17.0.14",
