--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/portal": "^1.3.10",
     "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/react-utils": "^1.2.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "firebase": "^9.6.10",
     "framer-motion": "^6",
     "next": "^12.1.5",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "react-currency-input-field": "^3.6.4",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "12.1.2",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
@@ -34,9 +38,7 @@
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
     "jest": "^27.5.1",
-    "jest-dom": "^4.0.0",
     "jest-mock": "^27.5.1",
-    "next-page-tester": "^0.31.0",
     "typescript": "^4.6.3"
   }
 }
