--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/portal": "^1.3.10",
-    "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/react": "2.0.0-next.0",
     "@chakra-ui/react-utils": "^1.2.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
