--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "17.0.14",
     "babel-jest": "^27.5.1",
+    "cypress": "^9.6.1",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
     "jest": "^27.5.1",
