--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-currency-input-field": "^3.6.4",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-toastify": "^8.2.0"
+    "react-toastify": "^8.2.0",
+    "recharts": "^2.1.10"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
